--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
                     </li>
 
                 </ul>
-                <div class="btnphone">
-
-                    <a href="#" target="_self">
-                        <i class="fa-solid fa-phone"></i>
-                        <span class="btButtonWidgetText">(+1) 555 234-8765</span>
-                    </a>
+                <div>
+                    <button class="btnphone">
+                        <i class="fa-solid fa-phone-flip"></i>
+                        <span>(+1) 555 234-8765</span>
+                    </button>
 
                 </div>
                 <div class="btnmxh">
@@ -71,31 +70,282 @@
         </nav>
     </header>
     <section class="bannerlanguege">
-        <div class="banner_content">
-            <div class="bannertop">
-                <img src="./img/yellow_top_wave_01.png">
-            </div>
-           
+        <div class="container">
+
+
             <div class="banner_container">
                 <div class="banner_left">
                     <div class="title">
-                        <p>ABOUT US</p>
-                        <h2>The language teaching experts</h2>
+
+                        <h2>ABOUT US</h2>
+                        <span>The language teaching experts</span>
+
                     </div>
                 </div>
                 <div class="banner_right">
                     <div class="banner_rt">
-                        <img src="./img/hero_team.png" alt="hero_team">
+                        <img class="img-fluid" src="./img/hero_team.png" alt="hero_team">
                     </div>
                 </div>
+            </div>
+            <div class="bannertop">
+                <img src="./img/yellow_top_wave_01.png">
             </div>
             <div class="bannerborder">
                 <img src="./img/Violet_top_left_wave.png">
             </div>
         </div>
     </section>
-    <section class="products"></section>
-    <footer></footer>
+    <section class="people">
+        <div class="peopleborder">
+            <img src="./img/Wave_White_bottom_right_shape_01.png">
+        </div>
+
+        <div class="container">
+            <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3 ">
+                        <div class="card">
+                            <img src="./img/teacher_1.jpg" alt="teacher_1">
+                            <div class="card-teacher">
+                                <span class="card-title">ITALIAN</span>
+                                <h4 class="card-text">July Roberts</h4>
+                                <p class="card-text-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+
+                        <div class="card">
+                            <img src="./img/teacher_2.jpg" alt="teacher_2">
+                            <div class="card-teacher">
+                                <span class="card-title">FRENCH</span>
+                                <h4 class="card-text">Jon Stone</h4>
+                                <p class="card-text-2">Nanotechnology immersion along the information.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <img src="./img/teacher_3.jpg" alt="teacher_3">
+                            <div class="card-teacher">
+                                <span class="card-title">JAPANESE</span>
+                                <h4 class="card-text">Emma Stone</h4>
+                                <p class="card-text-2">Bring to the table win-win survival strategies to ensure.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3 ">
+                        <div class="card">
+                            <img src="./img/teacher_4.jpg" alt="teacher_4">
+                            <div class="card-teacher">
+                                <span class="card-title">CHINESE</span>
+                                <h4 class="card-text">Mark Lee</h4>
+                                <p class="card-text-2">Proactive domination. At the end of the day, going forward.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3 ">
+                        <div class="card">
+                            <img src="./img/teacher_5.jpg" alt="teacher_5">
+                            <div class="card-teacher">
+                                <span class="card-title">RUSSIAN</span>
+                                <h4 class="card-text">John Doe</h4>
+                                <p class="card-text-2">A new normal that has evolved from generation X.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+
+                        <div class="card">
+                            <img src="./img/teacher_6.jpg" alt="teacher_6">
+                            <div class="card-teacher">
+                                <span class="card-title">SWEDEN</span>
+                                <h4 class="card-text">Jane Smith</h4>
+                                <p class="card-text-2">Heading towards a streamlined cloud solution.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <img src="./img/teacher_7.jpg" class="card-img-top" alt="teacher_7">
+                            <div class="card-teacher">
+                                <span class="card-title">SPANISH</span>
+                                <h4 class="card-text">Hanna Alverez</h4>
+                                <p class="card-text-2">Content in real-time will have multiple touchpoints.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <img src="./img/teacher_8.jpg" alt="teacher_8">
+                            <div class="card-teacher">
+                                <span class="card-title">ITALIAN</span>
+                                <h4 class="card-text">July Roberts</h4>
+                                <p class="card-text-2">Capitalize on low hanging fruit to identify a ballpark.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
+    <section class="formpeople">
+
+        <div class="container">
+            <div class="formpeoplebottom">
+                <img src="./img/accent_bottom_wave_01.png">
+            </div>
+            <div class="row">
+                <div class="formimg col-6">
+                    <img class="img-fluid" src="./img/conatct_inner.png" alt="conatct_inner">
+                </div>
+                <div class="formtext col-6">
+                    <form>
+                        <div class="over"></div>
+                        <h2>Find Your Course</h2>
+                        <div class="over"></div>
+                        <div class="formthunhat">
+
+                            <span class="form-group name ">
+
+                                <span class="fa-solid fa-user"></span>
+                                <input type="text" name="your-name" value="" size="30" class="form-control"
+                                    aria-required="true" aria-invalid="false" placeholder="Name">
+                            </span>
+                            <span class="form-group email">
+                                <span class="fa-solid fa-envelope"></span>
+                                <input type="text" name="your-name" value="" size="30" class="form-control"
+                                    aria-required="true" aria-invalid="false" placeholder="E-mail">
+                            </span>
+                        </div>
+                        <div class="over"></div>
+
+                        <span class="form-group ">
+                            <div class="input-group-langugue">
+
+                                <span class="fa-solid fa-graduation-cap"></span>
+                            </div>
+
+                            <select class="form-control">
+
+                                <option>English</option>
+                                <option>French</option>
+                                <option>Spanish</option>
+                                <option>German</option>
+                            </select>
+
+                        </span>
+
+                        <div class="over"></div>
+                        <span class="form-group message">
+                            <div class="input-group-messages">
+
+                                <span class="fa-solid fa-message"></span>
+                            </div>
+
+                            <span class="message_lazy" data-name="your-message">
+                                <textarea class="form-control" cols="40" rows="10" aria-invalid="false"
+                                    placeholder="Message"></textarea>
+                            </span>
+
+                        </span>
+                        <div class="over"></div>
+                        <div>
+                            <button class="btnphone">
+                                <span>Send</span>
+                            </button>
+
+                        </div>
+                        <div class="over"></div>
+                    </form>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+    </section>
+    <footer>
+        <div class="container-fluid">
+            <div class="row footer-width">
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                    <span class="title-footer">
+                        <h5>Contact us</h5>
+                    </span>
+                    <div class="content-footer">
+                        <div>
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span>Franklin St, Greenpoint Ave</span>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-phone-flip"></i>
+                            <span>+2342 5446 67</span>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>Monday - Friday: 8 AM - 5 PM</span>
+                        </div>
+                    </div>
+                    <div class="icon-footer">
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                    <span class="title-footer">
+                        <h5>Quick Links</h5>
+                    </span>
+                    <div class="footer-link">
+                        <a href="#">Home</a>
+                        <a href="#">Courses</a>
+                        <a href="#">Schedule</a>
+                        <a href="#">Blog</a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                    <span class="title-footer">
+                        <h5>About</h5>
+                    </span>
+                    <div class="footer-link">
+                        <a href="#">About Us</a>
+                        <a href="#">Events</a>
+                        <a href="#">Get Quote</a>
+                        <a href="#">Contact</a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                    <span class="title-footer">
+                        <h5>Newsletter</h5>
+                    </span>
+                    <div class="content-new">
+                        <div>
+                            <input type="text" placeholder="Your email">
+                        </div>
+                        <button class="btn1 btn-footer">SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
