--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <a href="http://tabula.bold-themes.com/wavy/about-us/our-team/"><img src="./img/crest.png"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="fa-solid fa-bars">
+                    
+                </span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
