--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header class="fixed-top  " id="ourtean">
+    <header class="fixed-top" id="ourtean">
         <nav class="container navbar navbar-expand-lg">
             <a href="http://tabula.bold-themes.com/wavy/about-us/our-team/"><img src="./img/crest.png"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -296,7 +296,7 @@
     <footer>
         <div class="container">
             <div class="row footer-Contact">
-                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12wow animate__animated animate__fadeIn  animate__delay-0s ">
                     <span class="title">
                         <h2>Contact us</h2>
                     </span>
@@ -321,7 +321,7 @@
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12 wow animate__animated animate__fadeIn animate__delay-1s">
                     <span class="title">
                         <h2>Quick Links</h2>
                     </span>
@@ -332,7 +332,7 @@
                         <a href="#">Blog</a>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12 wow animate__animated animate__fadeIn  animate__delay-2s">
                     <span class="title">
                         <h2>About</h2>
                     </span>
@@ -343,13 +343,13 @@
                         <a href="#">Contact</a>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12">
+                <div class="col-xl-3 col-md-6 col-lg-3 col-sm-12 wow animate__animated animate__fadeIn  animate__delay-3s">
                     <span class="title">
                         <h2>Newsletter</h2>
                     </span>
                     <div class="new">
                         <div>
-                            <input type="email" placeholder="Your email">
+                            <input class="Email" type="email" placeholder="Your email">
                         </div>
                         <button class="btn-sub">SUBSCRIBE</button>
                     </div>
